--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-certifi==2022.6.15
-charset-normalizer==2.1.0
-idna==3.3
-requests==2.28.1
-urllib3==1.26.11
+appdirs==1.4.4
+build==0.10.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+idna==3.4
+installer==0.7.0
+packaging==23.1
+pyproject_hooks==1.0.0
+requests==2.31.0
+tomli==2.0.1
+urllib3==2.0.2
